# Giraud2025_CarbonStabilisation

./: README.md
dumux-rosi/: optim.opts
dumux-rosi/applications/RootDensity/: rsd_analysis_voronoi.py
dumux-rosi/cpp/roots_1p/input/: soybean_2003.input
dumux-rosi/cpp/soil_richardsnc/: CMakeLists.txt
dumux/test/references/: test_co2_box-reference.vtu
dune-alugrid/: README.md  dune.module  pyproject.toml
dune-alugrid/dune/alugrid/: dgf.hh
dune-alugrid/examples/callback/: datamap.hh  problem-transport.hh  problem.hh
dune-alugrid/examples/communication/: adaptation.hh  dgf  problem-euler.hh
dune-alugrid/examples/dgf/: cube3d.dgf.3.0  cube3d.dgf.3.1  cube3d.dgf.3.2  tet.3.msh.dgf  tet.4.msh.dgf  tet.5.msh.dgf  tet.6.msh.dgf
dune-alugrid/examples/loadbalance/: fvscheme.hh  paralleldgf.hh
dune-alugrid/examples/quality/: diagnostics.hh
dune-alugrid/examples/testEfficiency/: adaptation.hh  fvscheme.hh  piecewisefunction.hh  problem-ball.hh
dune-foamgrid/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  COPYING  LICENSE.md  README.md  TODO  dune-foamgrid.pc.in  dune.module
dune-foamgrid/cmake/modules/: CMakeLists.txt
dune-foamgrid/doc/doxygen/: Doxylocal
dune-foamgrid/dune/foamgrid/: CMakeLists.txt  dgffoam.cc  dgffoam.hh  foamgrid.hh
dune-foamgrid/examples/: CMakeLists.txt  elementparametrization.cc  parametrized-refinement.cc
dune-foamgrid/patches/: checkintersection.patch
dune-foamgrid/python/: CMakeLists.txt  setup.py.in
dune-foamgrid/python/dune/: CMakeLists.txt
dune-foamgrid/python/dune/foamgrid/: CMakeLists.txt  __init__.py
(+58 files in other folders)
